Tercera Pre Entrega

--- a/aplicacion/templates/aplicacion/empleadoForm.html
+++ b/aplicacion/templates/aplicacion/empleadoForm.html
@@ -1,9 +1,9 @@
-{% extends 'aplicacion/mantenimientos.html' %}
+{% extends 'aplicacion/empleados.html' %}
 {% load static %}
 
 {% block contenido %}
 
-<h2>Registrar un nuevo Mantenimiento.</h2>
+<h2>Alta de nuevo empleado/operario en la planta.</h2>
 <br>
 <form action="" method="post">
     {% csrf_token %}
