--- a/aplicacion/templates/aplicacion/equipoForm.html
+++ b/aplicacion/templates/aplicacion/equipoForm.html
@@ -1,9 +1,9 @@
-{% extends 'aplicacion/mantenimientos.html' %}
+{% extends 'aplicacion/equipos.html' %}
 {% load static %}
 
 {% block contenido %}
 
-<h2>Registrar un nuevo Mantenimiento.</h2>
+<h2>Registrar un nuevo nuevo equipo en la planta.</h2>
 <br>
 <form action="" method="post">
     {% csrf_token %}
