--- a/aplicacion/templates/aplicacion/resultadosMantenimiento.html
+++ b/aplicacion/templates/aplicacion/resultadosMantenimiento.html
@@ -1,32 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resultados de Busqueda</title>
-</head>
-<body>
-    
-</body>
-</html>
-
-
-
-{% extends 'aplicacion/index.html' %}
+{% extends 'aplicacion/mantenimientos.html' %}
 {% load static %}
-
-{% block titulo %}            
-Mantenimientos
-{% endblock titulo %}
-
-{% block subtitulo %}            
-{% endblock subtitulo %}
 
 {% block contenido %}
 
-<h2>
+<h4>
     Resultado de la Búsqueda para Mantenimiento {{numero_operacion}}
-</h2>
+</h4>
+<br>
 <table class="table">
     <thead>
         <tr>
