--- a/aplicacion/templates/aplicacion/mantenimientos.html
+++ b/aplicacion/templates/aplicacion/mantenimientos.html
@@ -5,10 +5,24 @@
 Mantenimientos
 {% endblock titulo %}
 
+{% block imagen_fondo %}
+<header class="masthead" style="background-image: url(https://www.becosan.com/wp-content/uploads/2021/03/mantenimiento-preventivo-industrial.jpg)">
+{% endblock imagen_fondo %}
+
 {% block subtitulo %}            
 {% endblock subtitulo %}
 
 {% block contenido %}
+
+<div class="d-flex justify-content-center mb-4">
+    <a class="btn btn-primary text-uppercase" href="{% url 'mantenimiento_form' %}">Nuevo Registro de Mantenimiento →</a>
+</div>
+<div class="d-flex justify-content-center mb-4">
+    <a class="btn btn-primary text-uppercase" href="{% url 'busquedaMantenimiento' %}">Búsqueda de Mantenimiento →</a>
+</div>
+
+<br>
+<br>
 <table class="table">
     <thead>
         <tr>
@@ -30,4 +44,10 @@ Mantenimientos
     {% endfor %}
     </tbody>
 </table>
+<br>
+    <div>
+        <hr class="my-4" />
+    </div>
+<br>
+
 {% endblock contenido %}
