--- a/aplicacion/templates/aplicacion/equipo_form.html
+++ b/aplicacion/templates/aplicacion/equipo_form.html
@@ -1,9 +1,9 @@
-{% extends 'aplicacion/empleados.html' %}
+{% extends 'aplicacion/equipo_list.html' %}
 {% load static %}
 
 {% block contenido %}
 
-<h2>Alta de nuevo empleado/operario en la planta.</h2>
+<h2>Registrar un nuevo nuevo equipo en la planta.</h2>
 <br>
 <form action="" method="post">
     {% csrf_token %}
