--- a/aplicacion/templates/aplicacion/empleado_form.html
+++ b/aplicacion/templates/aplicacion/empleado_form.html
@@ -1,9 +1,9 @@
-{% extends 'aplicacion/equipos.html' %}
+{% extends 'aplicacion/empleado_list.html' %}
 {% load static %}
 
 {% block contenido %}
 
-<h2>Registrar un nuevo nuevo equipo en la planta.</h2>
+<h2>Alta de nuevo empleado en planta.</h2>
 <br>
 <form action="" method="post">
     {% csrf_token %}
