--- a/aplicacion/templates/aplicacion/index.html
+++ b/aplicacion/templates/aplicacion/index.html
@@ -42,7 +42,9 @@
             </div>
         </nav>
         <!-- Page Header-->
+        {% block imagen_fondo %}
         <header class="masthead" style="background-image: url('assets/img/home-bg.jpg')">
+        {% endblock imagen_fondo %}   
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
